--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -18,11 +18,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/white"
-            app:navigationIcon="@drawable/ic_arrow_back"
-            app:titleTextColor="@android:color/black"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp">
+            app:navigationIconTint="@color/black"
+            android:elevation="4dp"
+            app:navigationContentDescription="Back"
+            app:navigationIcon="@drawable/ic_arrow_back">
 
             <!-- Центрируем заголовок с помощью TextView -->
             <TextView
