--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -11,14 +11,12 @@
         android:id="@+id/toolbar_places_to_eat"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/white"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:titleTextColor="@android:color/black"
-        android:fitsSystemWindows="true"
-        android:text="Места"
-        android:gravity="center"
+        app:navigationIconTint="@color/black"
         android:elevation="4dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:navigationContentDescription="Back"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        android:gravity="center"
+
          />
 
     <androidx.recyclerview.widget.RecyclerView
