--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:fitsSystemWindows="true"
     android:background="@android:color/transparent">
 
     <!-- Фото человека с закруглёнными углами -->
