--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,36 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    tools:context=".MainActivity">
 
-    <!-- Фрейм для отображения фрагментов -->
-    <FrameLayout
+    <!-- Контейнер для фрагментов -->
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Панель навигации в футере -->
+    <!-- Панель навигации внизу экрана -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="0dp"
+        android:id="@+id/bottom_navigation_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_menu"
+        android:background="@android:color/white"
+        app:itemIconSize="24dp"
         app:itemIconTint="@color/nav_item_color_state"
+        app:itemTextAppearanceActive="@style/BottomNavigationActiveText"
+        app:itemTextAppearanceInactive="@style/BottomNavigationInactiveText"
         app:itemTextColor="@color/nav_item_color_state"
         app:labelVisibilityMode="labeled"
-        app:itemIconSize="24dp"
-        android:background="@android:color/white"
-        app:itemTextAppearanceActive="@style/BottomNavigationActiveText"
-        app:itemTextAppearanceInactive="@style/BottomNavigationInactiveText"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
     <!-- Карточка "Места", занимает 90% ширины с отступами -->
     <androidx.cardview.widget.CardView
@@ -41,16 +38,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
         android:focusable="true"
-        >
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -74,12 +70,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="12dp"
-                android:text="Места которые стоит посетить"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="Места которые стоит посетить"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -88,15 +84,15 @@
         android:id="@+id/card_view_region"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/card_view_places"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/card_view_famous_people"
+        android:clickable="true"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        android:clickable="true">
+        app:layout_constraintEnd_toStartOf="@id/card_view_famous_people"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_view_places">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -120,12 +116,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:text="О регионе"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="О регионе"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -133,15 +129,15 @@
         android:id="@+id/card_view_famous_people"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/card_view_places"
-        app:layout_constraintStart_toEndOf="@id/card_view_region"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="true"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        android:clickable="true">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/card_view_region"
+        app:layout_constraintTop_toBottomOf="@id/card_view_places">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -151,9 +147,9 @@
                 android:id="@+id/image_famous_people"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_zemlyki"
-                android:background="@android:color/transparent"/>
+                android:src="@drawable/ic_zemlyki" />
             <!-- Полупрозрачный черный фон для затемнения -->
             <View
                 android:layout_width="match_parent"
@@ -166,12 +162,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="16dp"
-                android:text="Земляки"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="Земляки"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -181,15 +177,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/card_view_famous_people"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        android:clickable="true"
-        android:focusable="true">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_view_famous_people">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -213,12 +209,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="16dp"
-                android:text="Где поесть"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="Где поесть"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -228,15 +224,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/card_view_where_to_eat"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        android:clickable="true"
-        android:focusable="true">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_view_where_to_eat">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -261,14 +257,14 @@
                 android:id="@+id/afisha_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
                 android:layout_margin="16dp"
+                android:background="@android:color/transparent"
                 android:text="Афиша"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:background="@android:color/transparent"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
