--- a/app/src/main/res/layout/activity_zemlyaki.xml
+++ b/app/src/main/res/layout/activity_zemlyaki.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"> <!-- или @android:color/transparent -->
+    android:fitsSystemWindows="true">
 
+    <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -14,26 +15,57 @@
         app:navigationIconTint="@color/black"
         android:elevation="4dp"
         app:navigationContentDescription="Back"
+        android:background="@android:color/white"
         app:navigationIcon="@drawable/ic_arrow_back"
-        >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <!-- Центрируем заголовок с помощью TextView -->
-    <TextView
-        android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
+        <!-- Центрируем заголовок с помощью TextView -->
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Земляки"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+    </androidx.appcompat.widget.Toolbar>
+
+    <!-- Контейнер для контента экрана -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="Suspicious0dp" />
+
+    <!-- Панель навигации -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Земляки"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black" /> <!-- Черный цвет текста -->
-</androidx.appcompat.widget.Toolbar>
+        app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@color/nav_item_color_state"
+        app:itemTextColor="@color/nav_item_color_state"
+        app:labelVisibilityMode="labeled"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- RecyclerView для списка людей -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_zemlyaki"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_height="wrap_content"
-        android:background="@android:color/white" /> <!-- Прозрачный или белый фон -->
-</LinearLayout>
+        android:paddingTop="?attr/actionBarSize"
+        android:paddingBottom="60dp"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
+    android:background="@android:color/white" />
+</androidx.constraintlayout.widget.ConstraintLayout>
