--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -82,6 +82,7 @@
         android:text="Это приложение для отображения мест и событий в Ставрополе."
         android:textColor="@android:color/black"
         android:textSize="16sp"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/app_version"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
