Исправил карточки "Где поесть"

--- a/app/src/main/res/layout/activity_places_to_eat.xml
+++ b/app/src/main/res/layout/activity_places_to_eat.xml
@@ -22,7 +22,6 @@
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu"
         android:background="@android:color/white"
@@ -51,7 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="8dp"
+        android:clipToPadding="false"
+        android:fitsSystemWindows="true"
         app:layout_constraintTop_toBottomOf="@id/toolbar_places_to_eat"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
