--- a/app/src/main/res/layout/activity_eat_place_detail.xml
+++ b/app/src/main/res/layout/activity_eat_place_detail.xml
@@ -1,7 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -35,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center_vertical"
             android:padding="16dp">
 
             <!-- ViewPager для фото -->
@@ -52,6 +52,7 @@
                 android:layout_marginTop="8dp"
                 android:textSize="22sp"
                 android:textStyle="bold"
+                android:paddingStart="4dp"
                 android:textColor="@android:color/black" />
 
             <!-- Описание заведения -->
@@ -63,14 +64,120 @@
                 android:textSize="16sp"
                 android:textColor="@android:color/black" />
 
-            <!-- Адрес -->
-            <TextView
-                android:id="@+id/place_address"
+            <!-- Плитка с информацией о месте с закругленными краями и серым фоном -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textSize="14sp"
-                android:textColor="@android:color/darker_gray" />
+                android:layout_marginTop="16dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp"
+                android:backgroundTint="@color/lightGray">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Информация о месте"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/black" />
+
+                    <!-- Координаты с иконкой -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/location"
+                            android:layout_marginEnd="8dp" />
+
+                        <TextView
+                            android:id="@+id/place_coordinates"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:clickable="true"
+                            />
+                    </LinearLayout>
+
+                    <!-- Адрес с иконкой -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/content"
+                            android:layout_marginEnd="8dp" />
+
+                        <TextView
+                            android:id="@+id/place_address"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black" />
+                    </LinearLayout>
+
+                    <!-- Телефон с иконкой -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/call"
+                            android:layout_marginEnd="8dp" />
+
+                        <TextView
+                            android:id="@+id/place_phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:autoLink="phone"
+                            android:textColor="@android:color/black" />
+                    </LinearLayout>
+
+                    <!-- Часы работы с иконкой -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/schedule"
+                            android:layout_marginEnd="8dp" />
+
+                        <TextView
+                            android:id="@+id/place_hours"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black" />
+
+                        <ImageView
+                            android:id="@+id/expand_icon"
+                            android:layout_width="19dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/chevron_right" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -79,7 +186,6 @@
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
         app:menu="@menu/bottom_nav_menu"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
