исправил рассписание и кнопки

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
 
     <!-- Синий цвет для активных элементов меню -->
     <color name="blue">#2196F3</color>
+    <color name="dark_blue">#00008B</color> <!-- Тёмно-синий цвет -->
+
 
     <!-- Серый цвет для неактивных элементов меню -->
     <color name="gray">#BDBDBD</color>
