--- a/app/src/main/res/layout/activity_eat_place_detail.xml
+++ b/app/src/main/res/layout/activity_eat_place_detail.xml
@@ -143,11 +143,16 @@
                             android:layout_marginEnd="8dp" />
 
                         <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black" />
+
+                        <TextView
                             android:id="@+id/place_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:autoLink="phone"
-                            android:textColor="@android:color/black" />
+                            android:textColor="@android:color/holo_blue_dark"
+                             />
                     </LinearLayout>
 
                     <!-- Часы работы с иконкой -->
