--- a/app/src/main/res/layout/activity_places_to_eat.xml
+++ b/app/src/main/res/layout/activity_places_to_eat.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu"
+        app:itemIconSize="24dp"
         android:background="@android:color/white"
         app:itemIconTint="@color/nav_item_color_state"
         app:itemTextColor="@color/nav_item_color_state"
