--- a/app/src/main/res/layout/activity_person_detail.xml
+++ b/app/src/main/res/layout/activity_person_detail.xml
@@ -38,6 +38,7 @@
         app:itemIconTint="@color/nav_item_color_state"
         app:itemTextColor="@color/nav_item_color_state"
         app:labelVisibilityMode="labeled"
+        app:itemIconSize="24dp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
