--- a/app/src/main/res/layout/activity_zemlyaki.xml
+++ b/app/src/main/res/layout/activity_zemlyaki.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav_menu"
+        app:itemIconSize="24dp"
         app:itemIconTint="@color/nav_item_color_state"
         app:itemTextColor="@color/nav_item_color_state"
         app:labelVisibilityMode="labeled"
