--- a/app/src/main/res/layout/activity_person_detail.xml
+++ b/app/src/main/res/layout/activity_person_detail.xml
@@ -1,6 +1,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -75,9 +76,10 @@
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 android:lineSpacingExtra="4dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:layout_marginTop="16dp"
-                android:padding="16dp"/>
+                android:padding="16dp"
+                tools:ignore="RtlHardcoded" />
 
 
         </LinearLayout>
