--- a/app/src/main/res/layout/activity_eat_place_detail.xml
+++ b/app/src/main/res/layout/activity_eat_place_detail.xml
@@ -43,25 +43,25 @@
     <!-- TabLayout для отображения индикатора страницы под фото -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/photo_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/white"
+        android:layout_width="20dp"
+        android:layout_height="10dp"
+        android:layout_marginTop="10dp"
+
+        android:layout_marginHorizontal="10dp"
         android:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/photo_view_pager"
         app:tabBackground="@drawable/custom_tab_indicator"
         app:tabContentStart="0dp"
-        android:layout_marginHorizontal="2dp"
         app:tabGravity="center"
         app:tabIconTint="@color/gray"
         app:tabIndicator="@null"
         app:tabIndicatorFullWidth="false"
         app:tabMaxWidth="10dp"
-        app:tabMinWidth="10dp"
+        app:tabMinWidth="6dp"
         app:tabMode="fixed"
-        app:tabPadding="4dp"
+        app:tabPadding="10dp"
         app:tabRippleColor="@null"
         app:tabSelectedTextColor="@color/blue" />
 
