--- a/app/src/main/res/layout/item_photo_pager.xml
+++ b/app/src/main/res/layout/item_photo_pager.xml
@@ -10,6 +10,7 @@
         android:id="@+id/photo_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
