--- a/app/src/main/res/layout/layout_fullscreen_image.xml
+++ b/app/src/main/res/layout/layout_fullscreen_image.xml
@@ -1,14 +1,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
     <ImageView
-        android:id="@+id/fullscreen_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/photo_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-    />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
