--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -26,11 +26,14 @@
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="О приложении"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.appcompat.widget.Toolbar>
 
     <!-- Логотип приложения -->
@@ -80,8 +83,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Ставротека — твой гид по Ставропольскому краю!
-
-Ставротека — это удобное и полезное приложение для жителей и гостей Ставропольского края. Узнайте о лучших местах города, интересных событиях и достопримечательностях. Ставротека поможет вам открыть город с новой стороны и не пропустить ничего важного."
+Ставротека — это удобное и полезное приложение для жителей и гостей Ставропольского края"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:gravity="center"
@@ -104,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Разработчики: Илья Черняев"
+        android:text="Разработчик: Илья Черняев"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/description_text"
@@ -124,40 +126,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Ссылки на политику конфиденциальности и лицензии -->
-    <TextView
-        android:id="@+id/privacy_policy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Политика конфиденциальности"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="16sp"
-        android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@id/contact_info"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/licenses"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Лицензии"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="16sp"
-        android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@id/privacy_policy"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <!-- Разделитель перед социальными ссылками -->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/licenses" />
+        app:layout_constraintTop_toBottomOf="@id/contact_info"/>
 
     <!-- Социальные ссылки -->
     <TextView
@@ -168,7 +143,7 @@
         android:text="Следи за новостями"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/licenses"
+        app:layout_constraintTop_toBottomOf="@id/contact_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -179,7 +154,9 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/social_media_header">
+        app:layout_constraintTop_toBottomOf="@id/social_media_header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- YouTube -->
         <LinearLayout
@@ -193,7 +170,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/rutube"
-                android:contentDescription="RuTube"
+                android:contentDescription="YouTube"
                 android:clickable="true"
                 android:onClick="openYouTube" />
 
