--- a/app/src/main/res/layout/activity_zemlyaki.xml
+++ b/app/src/main/res/layout/activity_zemlyaki.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:navigationIconTint="@color/black"
-        android:elevation="4dp"
+        android:elevation="0dp"
         app:navigationContentDescription="Back"
         android:background="@android:color/white"
         app:navigationIcon="@drawable/ic_arrow_back"
@@ -33,16 +33,18 @@
             android:textColor="@color/black" />
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- Контейнер для контента экрана -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <!-- RecyclerView для списка людей -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_zemlyaki"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="Suspicious0dp" />
+        android:background="@android:color/white" />
 
     <!-- Панель навигации -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -59,14 +61,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView для списка людей -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_zemlyaki"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="?attr/actionBarSize"
-        android:paddingBottom="60dp"
-    app:layout_constraintTop_toBottomOf="@id/toolbar"
-    app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
-    android:background="@android:color/white" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
